# ocho

./: Cargo.toml  LICENSE-MIT  README.md
src/: chip8.rs  emulator.rs  framebuffer.rs  instruction.rs  main.rs
