[package]
name = "ocho"
version = "0.2.0"
edition = "2021"
authors = ["Sean O'Rourke"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.4", features = ["derive"] }
rand = "0.8.5"
sdl2 = "0.35.2"